--- a/css/custom.css
+++ b/css/custom.css
@@ -17,15 +17,15 @@
   
   /* Hero
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  .phones {
+  .jakes {
     position: relative;
   }
-  .phone {
+  .jake {
     position: relative;
     max-width: 80%;
     margin: 3rem auto -12rem;
   }
-  .phone + .phone {
+  .jake + .jake {
     display: none;
   }
   
@@ -76,14 +76,14 @@
       text-align: left;
       height: 165px;
     }
-    .phone {
+    .jake {
       position: absolute;
       top: -7rem;
       right: 3rem;
       max-height: 362px;
       z-index: 3;
     }
-    .phone + .phone {
+    .jake + .jake {
       top: -6rem;
       display: block;
       max-width: 73.8%;
@@ -115,12 +115,12 @@
       margin-left: auto;
       margin-right: auto;
     }
-    .phone {
+    .jake {
       top: -14rem;
       right: 5rem;
       max-height: 510px;
     }
-    .phone + .phone {
+    .jake + .jake {
       top: -12rem;
       max-height: 472px;
     }
@@ -140,11 +140,11 @@
     .hero-heading {
       font-size: 3.0rem;
     }
-    .phone {
+    .jake {
       top: -16rem;
       max-height: 615px;
     }
-    .phone + .phone {
+    .jake + .jake {
       top: -14rem;
       max-height: 570px;
     }
