--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -174,6 +174,12 @@ body {
   color: #222;
 }
 
+@font-face { 
+  font-family: Adventure Time Logo; 
+  src: url('/fonts/AdventureTimeLogo.ttf');
+  font-weight: 100;
+	font-style: normal;
+}
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
