--- a/css/custom.css
+++ b/css/custom.css
@@ -85,6 +85,9 @@
       text-align: left;
       height: 165px;
     }
+    .hero-heading {
+      font-size: 2.5rem;
+    }
     .jake {
       position: absolute;
       top: -7rem;
@@ -109,8 +112,7 @@
       height: 190px;
     }
     .hero-heading {
-      font-size: 2.6rem;
-      font-family: Adventure Time Logo;
+      font-size: 3.5rem;
     }
     .section {
       padding: 14rem 0 15rem;
